# AudioProcessing

./: .gitignore  AudioProcessingApp.sln  README.md  docker-compose.yml
backend/AudioProcessing.API/: AudioProcessing.API.csproj  AudioProcessing.API.http  Dockerfile  Program.cs  appsettings.Development.json  appsettings.Docker.json  appsettings.json
backend/AudioProcessing.API/Controllers/: CommonController.cs  FilesController.cs  HealthController.cs  JobsController.cs  ProcessController.cs  TracksController.cs
backend/AudioProcessing.API/Middleware/: ExceptionHandler.cs
backend/AudioProcessing.API/Properties/: launchSettings.json
backend/AudioProcessing.API/Services/: JobHub.cs  JobStatusConsumer.cs  (+2 more)
backend/AudioProcessing.Application/: AudioProcessing.Application.csproj  Class1.cs
backend/AudioProcessing.Core/: Class1.cs
backend/AudioProcessing.Domain/: KafkaTopics.cs  MusicGenre.cs  MusicInstrument.cs
backend/AudioProcessing.Infrastructure/: AudioProcessing.Infrastructure.csproj  Class1.cs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  signalr.ts  style.css
ml-service/: .dockerignore  .env.example  .gitignore  BACKEND_INTEGRATION.md  Dockerfile  Makefile  README.md  appsettings.backend.json  docker-compose.yml  model_weights.pth  process_audio_keys_improved.py  process_audio_keys_improved_clean.py  pyproject.toml  requirements.txt  train_keys_model_improved.py  train_model.py
ml-service/app/: Dockerfile  config.py  kafka_service.py  main.py  minio_service.py  model.py  model_manager.py  model_registry.py  model_service.py  model_service_unet.py  model_unet_improved.py  requirements.txt  utils.py  utils_unet.py
ml-service/app/models/: model_unet_improved.py  utils_unet.py
ml-service/app/models/bass/: config.py  model.py  processor.py  utils.py
ml-service/app/models/keys/: __init__.py  config.py  processor.py
ml-service/ml-scripts/: process_bass.py  train_bass_model_improved.py  train_keys_model_improved.py
workers/AudioProcessing.Worker/: AudioProcessing.Worker.csproj  Dockerfile  Program.cs  Worker.cs
(+82 files in other folders)
