[tool.poetry]
name = "ml-audio-processor"
version = "1.0.0"
description = "Asynchronous audio processing service with Kafka integration and GRU model"
authors = ["Nastya <nastya@diploma.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
torch = "^2.0.0"
librosa = "^0.10.0"
soundfile = "^0.12.1"
numpy = "^1.24.0"
matplotlib = "^3.8.0"
python-multipart = "^0.0.6"
confluent-kafka = "^2.3.0"
minio = "^7.2.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
black = "^23.12.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", "__pycache__", ".venv", "venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = [
    "E501",  # Line too long (handled by black)
    "D100", "D101", "D102", "D103",  # Missing docstrings
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
