[tool.poetry]
name = "diploma-ml-service"
version = "0.1.0"
description = "ML service for keyboard audio effect processing"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
torch = "^2.0.0"
librosa = "^0.10.0"
soundfile = "^0.12.0"
numpy = "^1.24.0"
matplotlib = "^3.8.0"
python-multipart = "^0.0.6"
confluent-kafka = "^2.0.0"
minio = "^7.1.0"
requests = "^2.31.0"
noise = "^1.2.2"
ruff = "^0.15.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
